--- a/apps/jobber-auth/project.json
+++ b/apps/jobber-auth/project.json
@@ -39,6 +39,18 @@
       "options": {
         "passWithNoTests": true
       }
+    },
+    "generate-types": {
+      "command": "prisma generate",
+      "options": {
+        "cwd": "apps/jobber-auth"
+      }
+    },
+    "migrate-prisma": {
+      "command": "prisma migrate dev",
+      "options": {
+        "cwd": "apps/jobber-auth"
+      }
     }
   }
 }
